--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "coffee-script": "^1.7.1",
     "express": "^4.4.2",
     "mocha": "^1.20.1",
-    "multiparty": "^3.2.8",
     "supervisor": "^0.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "multiparty": "^3.2.8"
+  }
 }
