Add build commands to package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "start": "supervisor -w . -- examples/basic/server.coffee",
-    "postinstall": "rm -rf lib/* && coffee --bare -o lib/ -c src/; [ -d .git/hooks/ ] && cp config/git-hooks/pre-commit .git/hooks/.",
+    "build": "coffee --bare --compile --output lib/ src/*.coffee",
+    "prepublish": "coffee --bare --compile --output lib/ src/*.coffee",
+    "postpublish": "rm -rf lib/*",
     "test": "mocha -w -b -c --check-leaks test/suite.coffee -R progress --compilers coffee:coffee-script/register",
     "test-drone": "node_modules/.bin/mocha -b -c --check-leaks test/suite.coffee -R spec --compilers coffee:coffee-script/register"
   },
