--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
   },
   "homepage": "https://github.com/Turistforeningen/jfum",
   "devDependencies": {
-    "coffee-script": "^1.7.1",
-    "express": "^4.4.3",
-    "mocha": "^1.20.1",
-    "morgan": "^1.1.1",
+    "coffee-script": "^1.8.0",
+    "express": "^4.8.7",
+    "mocha": "^1.21.4",
+    "morgan": "^1.3.0",
     "supervisor": "^0.6.0"
   },
   "dependencies": {
-    "multiparty": "^3.2.8"
+    "multiparty": "~3.3.2"
   },
   "engines": {
     "node": ">=0.10.3 <0.12"
